gen/simplehtn/JSHOP2Parser.java
// Generated from simplehtn\JSHOP2.g4 by ANTLR 4.9.2
package simplehtn;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JSHOP2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		IMMEDIATE=32, UNORDERED=33, WS=34, COMMENT=35, ID=36, OPID=37, VARID=38, 
		NUM=39;
	public static final int
		RULE_shop = 0, RULE_problem = 1, RULE_domain = 2, RULE_pde = 3, RULE_method = 4, 
		RULE_methodsub = 5, RULE_operator = 6, RULE_axiom = 7, RULE_axiomsub = 8, 
		RULE_deladd = 9, RULE_deladdele = 10, RULE_tasklist = 11, RULE_tasklistsub = 12, 
		RULE_taskatom = 13, RULE_lprecond = 14, RULE_compname = 15, RULE_lexp = 16, 
		RULE_latomlist = 17, RULE_latom = 18, RULE_funcname = 19, RULE_terml = 20, 
		RULE_term = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"shop", "problem", "domain", "pde", "method", "methodsub", "operator", 
			"axiom", "axiomsub", "deladd", "deladdele", "tasklist", "tasklistsub", 
			"taskatom", "lprecond", "compname", "lexp", "latomlist", "latom", "funcname", 
			"terml", "term"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "'defproblem'", "')'", "'defdomain'", "':method'", "':operator'", 
			"':-'", "'nil'", "':protection'", "'forall'", "':first'", "':sort-by'", 
			"'<'", "'>'", "'and'", "'or'", "'not'", "'imply'", "'assign'", "'call'", 
			"'/'", "'='", "'<='", "'member'", "'-'", "'>='", "'*'", "'!='", "'+'", 
			"'^'", "'.'", "':immediate'", "':unordered'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "IMMEDIATE", "UNORDERED", 
			"WS", "COMMENT", "ID", "OPID", "VARID", "NUM"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JSHOP2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JSHOP2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ShopContext extends ParserRuleContext {
		public DomainContext domain() {
			return getRuleContext(DomainContext.class,0);
		}
		public ProblemContext problem() {
			return getRuleContext(ProblemContext.class,0);
		}
		public ShopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterShop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitShop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSHOP2Visitor ) return ((JSHOP2Visitor<? extends T>)visitor).visitShop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShopContext shop() throws RecognitionException {
		ShopContext _localctx = new ShopContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_shop);
		try {
			setState(46);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(44);
				domain();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(45);
				problem();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProblemContext extends ParserRuleContext {
		public Token pn;
		public Token dn;
		public LatomlistContext state;
		public TasklistContext tl;
		public List<TerminalNode> ID() { return getTokens(JSHOP2Parser.ID); }
		public TerminalNode ID(int i) {
			return getToken(JSHOP2Parser.ID, i);
		}
		public LatomlistContext latomlist() {
			return getRuleContext(LatomlistContext.class,0);
		}
		public TasklistContext tasklist() {
			return getRuleContext(TasklistContext.class,0);
		}
		public ProblemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_problem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterProblem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitProblem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSHOP2Visitor ) return ((JSHOP2Visitor<? extends T>)visitor).visitProblem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProblemContext problem() throws RecognitionException {
		ProblemContext _localctx = new ProblemContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_problem);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(T__0);
			setState(49);
			match(T__1);
			setState(50);
			((ProblemContext)_localctx).pn = match(ID);
			setState(51);
			((ProblemContext)_localctx).dn = match(ID);
			setState(52);
			((ProblemContext)_localctx).state = latomlist();
			setState(53);
			((ProblemContext)_localctx).tl = tasklist();
			setState(54);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DomainContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(JSHOP2Parser.ID, 0); }
		public List<PdeContext> pde() {
			return getRuleContexts(PdeContext.class);
		}
		public PdeContext pde(int i) {
			return getRuleContext(PdeContext.class,i);
		}
		public DomainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_domain; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterDomain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitDomain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSHOP2Visitor ) return ((JSHOP2Visitor<? extends T>)visitor).visitDomain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DomainContext domain() throws RecognitionException {
		DomainContext _localctx = new DomainContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_domain);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(T__0);
			setState(57);
			match(T__3);
			setState(58);
			match(ID);
			setState(59);
			match(T__0);
			setState(61); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(60);
				pde();
				}
				}
				setState(63); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__0 );
			setState(65);
			match(T__2);
			setState(66);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PdeContext extends ParserRuleContext {
		public MethodContext method() {
			return getRuleContext(MethodContext.class,0);
		}
		public OperatorContext operator() {
			return getRuleContext(OperatorContext.class,0);
		}
		public AxiomContext axiom() {
			return getRuleContext(AxiomContext.class,0);
		}
		public PdeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pde; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterPde(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitPde(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSHOP2Visitor ) return ((JSHOP2Visitor<? extends T>)visitor).visitPde(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PdeContext pde() throws RecognitionException {
		PdeContext _localctx = new PdeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pde);
		try {
			setState(71);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				method();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				operator();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(70);
				axiom();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(JSHOP2Parser.ID, 0); }
		public TermlContext terml() {
			return getRuleContext(TermlContext.class,0);
		}
		public List<MethodsubContext> methodsub() {
			return getRuleContexts(MethodsubContext.class);
		}
		public MethodsubContext methodsub(int i) {
			return getRuleContext(MethodsubContext.class,i);
		}
		public MethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitMethod(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSHOP2Visitor ) return ((JSHOP2Visitor<? extends T>)visitor).visitMethod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodContext method() throws RecognitionException {
		MethodContext _localctx = new MethodContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_method);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(T__0);
			setState(74);
			match(T__4);
			setState(75);
			match(T__0);
			setState(76);
			match(ID);
			setState(77);
			terml();
			setState(78);
			match(T__2);
			setState(80); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(79);
				methodsub();
				}
				}
				setState(82); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__7) | (1L << ID) | (1L << VARID))) != 0) );
			setState(84);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodsubContext extends ParserRuleContext {
		public LprecondContext pre;
		public TasklistContext tl;
		public LprecondContext lprecond() {
			return getRuleContext(LprecondContext.class,0);
		}
		public TasklistContext tasklist() {
			return getRuleContext(TasklistContext.class,0);
		}
		public TerminalNode ID() { return getToken(JSHOP2Parser.ID, 0); }
		public MethodsubContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodsub; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterMethodsub(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitMethodsub(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSHOP2Visitor ) return ((JSHOP2Visitor<? extends T>)visitor).visitMethodsub(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodsubContext methodsub() throws RecognitionException {
		MethodsubContext _localctx = new MethodsubContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_methodsub);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(86);
				match(ID);
				}
			}

			setState(89);
			((MethodsubContext)_localctx).pre = lprecond();
			setState(90);
			((MethodsubContext)_localctx).tl = tasklist();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperatorContext extends ParserRuleContext {
		public LprecondContext pre;
		public DeladdContext del;
		public DeladdContext add;
		public TermContext cost;
		public TerminalNode OPID() { return getToken(JSHOP2Parser.OPID, 0); }
		public TermlContext terml() {
			return getRuleContext(TermlContext.class,0);
		}
		public LprecondContext lprecond() {
			return getRuleContext(LprecondContext.class,0);
		}
		public List<DeladdContext> deladd() {
			return getRuleContexts(DeladdContext.class);
		}
		public DeladdContext deladd(int i) {
			return getRuleContext(DeladdContext.class,i);
		}
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public OperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSHOP2Visitor ) return ((JSHOP2Visitor<? extends T>)visitor).visitOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperatorContext operator() throws RecognitionException {
		OperatorContext _localctx = new OperatorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_operator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(T__0);
			setState(93);
			match(T__5);
			setState(94);
			match(T__0);
			setState(95);
			match(OPID);
			setState(96);
			terml();
			setState(97);
			match(T__2);
			setState(98);
			((OperatorContext)_localctx).pre = lprecond();
			setState(99);
			((OperatorContext)_localctx).del = deladd();
			setState(100);
			((OperatorContext)_localctx).add = deladd();
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__7) | (1L << ID) | (1L << VARID) | (1L << NUM))) != 0)) {
				{
				setState(101);
				((OperatorContext)_localctx).cost = term();
				}
			}

			setState(104);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AxiomContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(JSHOP2Parser.ID, 0); }
		public TermlContext terml() {
			return getRuleContext(TermlContext.class,0);
		}
		public List<AxiomsubContext> axiomsub() {
			return getRuleContexts(AxiomsubContext.class);
		}
		public AxiomsubContext axiomsub(int i) {
			return getRuleContext(AxiomsubContext.class,i);
		}
		public AxiomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_axiom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterAxiom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitAxiom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSHOP2Visitor ) return ((JSHOP2Visitor<? extends T>)visitor).visitAxiom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AxiomContext axiom() throws RecognitionException {
		AxiomContext _localctx = new AxiomContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_axiom);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(T__0);
			setState(107);
			match(T__6);
			setState(108);
			match(T__0);
			setState(109);
			match(ID);
			setState(110);
			terml();
			setState(111);
			match(T__2);
			setState(113); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(112);
				axiomsub();
				}
				}
				setState(115); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__7) | (1L << ID) | (1L << VARID))) != 0) );
			setState(117);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AxiomsubContext extends ParserRuleContext {
		public LprecondContext pre;
		public LprecondContext lprecond() {
			return getRuleContext(LprecondContext.class,0);
		}
		public TerminalNode ID() { return getToken(JSHOP2Parser.ID, 0); }
		public AxiomsubContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_axiomsub; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterAxiomsub(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitAxiomsub(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSHOP2Visitor ) return ((JSHOP2Visitor<? extends T>)visitor).visitAxiomsub(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AxiomsubContext axiomsub() throws RecognitionException {
		AxiomsubContext _localctx = new AxiomsubContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_axiomsub);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(119);
				match(ID);
				}
			}

			setState(122);
			((AxiomsubContext)_localctx).pre = lprecond();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeladdContext extends ParserRuleContext {
		public DeladdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deladd; }
	 
		public DeladdContext() { }
		public void copyFrom(DeladdContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DelAdd_BasicContext extends DeladdContext {
		public List<DeladdeleContext> deladdele() {
			return getRuleContexts(DeladdeleContext.class);
		}
		public DeladdeleContext deladdele(int i) {
			return getRuleContext(DeladdeleContext.class,i);
		}
		public DelAdd_BasicContext(DeladdContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterDelAdd_Basic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitDelAdd_Basic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSHOP2Visitor ) return ((JSHOP2Visitor<? extends T>)visitor).visitDelAdd_Basic(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DelAdd_VarContext extends DeladdContext {
		public TerminalNode VARID() { return getToken(JSHOP2Parser.VARID, 0); }
		public DelAdd_VarContext(DeladdContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterDelAdd_Var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitDelAdd_Var(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSHOP2Visitor ) return ((JSHOP2Visitor<? extends T>)visitor).visitDelAdd_Var(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DelAdd_NilContext extends DeladdContext {
		public DelAdd_NilContext(DeladdContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterDelAdd_Nil(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitDelAdd_Nil(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSHOP2Visitor ) return ((JSHOP2Visitor<? extends T>)visitor).visitDelAdd_Nil(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeladdContext deladd() throws RecognitionException {
		DeladdContext _localctx = new DeladdContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_deladd);
		int _la;
		try {
			setState(134);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				_localctx = new DelAdd_BasicContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				match(T__0);
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0 || _la==VARID) {
					{
					{
					setState(125);
					deladdele();
					}
					}
					setState(130);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(131);
				match(T__2);
				}
				break;
			case VARID:
				_localctx = new DelAdd_VarContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				match(VARID);
				}
				break;
			case T__7:
				_localctx = new DelAdd_NilContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(133);
				match(T__7);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
